--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <title>About Page</title>
 
         <link rel="stylesheet" href="/styles.css">
-    <link rel="icon" type="image/png" href="/images.GkKybwabUAATl0r.jpg"/>
+    <link rel="icon" type="image/png" href="/images/GkKybwabUAATl0r.jpg"/>
 </head>
 
 <body style="background-color:black;">
@@ -28,7 +28,7 @@
     <div class="aboutcontent">
         <h3>maxine.dev</h3>
         <p>
-            A webpage created for showcasing projects and getting to know <span class="rainbowww">maxinewastaken</span>
+            A webpage created for showcasing projects and getting to know <span class="rainbowww">MaxineThe2nd</span>
             <br><br>
         </p>
     </div>
