--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta content="Developer page for maxinewastaken" property="og:description" />
     <meta content="https://maxinewastaken.github.io/index.html" property="og:url" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
-
+    <link rel="icon" type="image/png" href="/images/GkKybwabUAATl0r.jpg"/>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body class="index-body"style="background-color:black;">
@@ -21,30 +21,40 @@
 
 
 <div class="header-home">
-    <h1>Welcome to the Underground</h1>
-    <p class="growp">how was the fall?</p>
-    <p style="font-size:12px">this site will be updated occasionally</p>
+    <h1>MaxineThe2nd</h1>
+    <p class="growp">(maxinewastaken)</p>
+    <p style="font-size:12px"></p>
 </div>
 <div class="contentstuff">
-    <!--- <img class="papyrus"src="https://preview.redd.it/welcome-to-the-underground-v0-aosebsbuoiy91.png?width=590&format=png&auto=webp&s=e769145f1b7ed43fcd440eb610f47264affedde1"> -->
-    <br>
-    <br>
-    <hr> <br>
-    <p class="rainbowtext"><b>I'm testing some things</b></p>
+    <br> <br> <hr> <br>
+    <p class="rainbowtext" style="font-size: 25px;"><b>About me</b></p>
+    <p style="font-size: 20px;"> Hello! <br> 
+    My name is MaxineThe2nd and I am a Roblox developer. 
+    <br><br>
+    I have been coding in Luau for almost 2 years and I want to progress my skills to become a master in this language. 
+    <br><br>
+    I am currently a first year computer engineering student at a community college and I will be 
+    transferring to Clemson University in the next school year.   
 
-    <br><br><br>
+    </p>
+   
+    <p class="rainbowtext" style="font-size: 25px;"><b>Skills</b></p>
+    <p>
+    - Languages: Luau, HTML/CSS, JavaScript <br>
+    - Object Oriented Programming in Luau <br>
+    <br>
+    - Music Production <br>
+    - Video Editing <br>
+    <br><br>
+    <br><br>
+    </p>
 
 <!---Photos of things-->
+    <br><br>
+
+    <img src="images/ok9zjv_1-ezgif.com-crop.gif" style="width:250px;height:250px;">
     
     <br><br><br>
-
-    <br><br><br>
-
-    <img id="gif" src="https://media.tenor.com/dDz29w_PyEMAAAAd/csgo-counter-strike.gif" style="width:200px;height:200px;">
-    
-    <br><br><br>
-
-    <img class="trollfacepng"src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9a/Trollface_non-free.png/220px-Trollface_non-free.png" width="40px" height="36px">
 
 </div>
 
@@ -53,8 +63,12 @@
 <hr> 
 
 <div class="sitefooter">
-    <p class="smalltext">Test</p>
-    <a id="nolinkstuff" href="changelog.html"><p style="font-size:10px;"> Last Updated: 2/22/2026 </p></a>
+    <p class="smalltext">
+        GitHub: <a href="https://github.com/maxinewastaken"> @maxinewastaken </a>
+        <br> 
+        Contact: <a href="maxinethe2nd2@gmail.com"> maxinethe2nd2@gmail.com </a>
+    </p>
+    <a id="nolinkstuff" href="/changelog.html"><p style="font-size:10px;"> Last Updated: 2/22/2026 </p></a>
 </div>
 
 </div>
